...
    <string name="period">Period:</string>
    <string name="enter_details">Enter Details</string>
    <string name="algorithm">Algorithm:</string>
    <string name="base32_encoded_secret">Base32</string>
    <string name="hex_encoded_secret">Hexadecimal</string>
    <string name="title_radioGroup_encoding">Encoding of secret:</string>
    <string name="name" translatable="false">Name</string>
    <string name="secret">Secret</string>
    <string name="type">Type:</string>
    <string name="with_pin">With PIN</string>
    <string name="enterdetail_secret">Secret</string>

    <!--Strings for menu-->
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_add_manually">Add token manually</string>
    <string name="menu_about">About</string>
    <string name="actionmode_title">Choose an action</string>

    <!--Strings for dialogs-->
    <string name="confirm_deletion_title">Confirm Deletion</string>
    <string name="confirm_deletion_text">Do you really want to delete the token &lt;i>%s&lt;/i>?</string>
    <string name="edit_name_title">Edit Name</string>
    <string name="rename">Rename</string>
    <string name="item" translatable="false">Item</string>
    <string name="change_pin">Change PIN</string>
    <string name="tap_to_show_otp">Tap to show </string>
    <string name="tap_to_unlock">Tap to unlock</string>
    <string name="tap_to_set_pin">Tap to set PIN</string>
    <string name="enter_pin_title">Enter PIN</string>
    <string name="set_new_pin">Set new PIN</string>
    <string name="input_hint_new_pin">New PIN</string>
...
    <string name="toast_pin_changed">PIN was changed</string>
    <string name="toast_change_pin_cancelled">Changing PIN cancelled</string>
    <string name="toast_otp_to_clipboard">OTP copied to Clipboard</string>

    <!--Strings for buttons-->
    <string name="button_text_no">No</string>
    <string name="button_text_yes">Yes</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_enter">Enter</string>
    <string name="button_text_plus" translatable="false">+</string>

    <!--Strings for about-->
    <string name="version" translatable="false">Version </string>
    <string name="piauth_name_label" translatable="false">privacyIDEA Authenticator</string>
...
