<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/change_pin2"
        android:icon="@drawable/ic_change_pin"
        android:title="@string/change_pin"
        app:showAsAction="always" />
    <item
        android:id="@+id/edit_token2"
        android:icon="@drawable/ic_edit"
        android:title="@string/rename"
        app:showAsAction="always" />
    <item
        android:id="@+id/delete_token2"
        android:icon="@drawable/ic_delete"
        android:title="@string/item"
        app:showAsAction="always" />
    <item
        android:id="@+id/copy_clipboard"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/menu_copy_to_clipboard"
        app:showAsAction="never" />
</menu>