...
            android:onClick="onRadioButtonClicked"
            android:text="@string/hex_encoded_secret"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/with_pin"
        android:textAppearance="@style/TextAppearance.AppCompat.Menu"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_encoding" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="@color/PIBLUE"
        android:fadingEdge="horizontal|vertical"
        android:fontFamily="monospace"
...
